--- a/eventos.css
+++ b/eventos.css
@@ -1,5 +1,6 @@
 .evento-item {
-    display: flex;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
     margin: 40px;
     background-color: #E4ECC5;
     border: 1px solid black;
@@ -11,8 +12,10 @@
 }
 
 .evento-item img {
-    width: 200px;
+    width: 100%;
     height: 200px;
+    object-fit: cover;
+    
 }
 
 main {
@@ -47,26 +50,135 @@ main {
     justify-content: space-around;
 }
 
-button {
-    background-color: #eb634ee4;
-    border-radius: 9px;
-    color: #ffffff;
-    padding: 11px;
-    position: absolute;
-    right: 10px;
-    top: 10px;
-
-}
-
-button:hover {
-    cursor: pointer;
-    background-color: #EB644E;
-}
-
 select {
     position: absolute;
     padding: 11px;
     width: 150px;
-    right: 50px;
+    right: 55px;
     top: 20px
+}
+
+/* CSS */
+.button-82-pushable {
+    position: absolute;
+    right: 10px;
+    top: 10px;
+    border: none;
+    background: transparent;
+    padding: 0;
+    cursor: pointer;
+    outline-offset: 4px;
+    transition: filter 250ms;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+}
+
+.button-82-shadow {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: hsl(0deg 0% 0% / 0.25);
+    will-change: transform;
+    transform: translateY(2px);
+    transition:
+        transform 600ms cubic-bezier(.3, .7, .4, 1);
+}
+
+.button-82-edge {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    border-radius: 12px;
+    background: linear-gradient(to left,
+            hsl(340deg 100% 16%) 0%,
+            hsl(340deg 100% 32%) 8%,
+            hsl(340deg 100% 32%) 92%,
+            hsl(340deg 100% 16%) 100%);
+}
+
+.button-82-front {
+    display: block;
+    position: relative;
+    padding: 12px 27px;
+    border-radius: 12px;
+    font-size: 1.1rem;
+    color: white;
+    background: hsl(345deg 100% 47%);
+    will-change: transform;
+    transform: translateY(-4px);
+    transition:
+        transform 600ms cubic-bezier(.3, .7, .4, 1);
+}
+
+@media (min-width: 768px) {
+    .button-82-front {
+        font-size: 1.25rem;
+        padding: 12px 42px;
+    }
+}
+
+.button-82-pushable:hover {
+    filter: brightness(110%);
+    -webkit-filter: brightness(110%);
+}
+
+.button-82-pushable:hover .button-82-front {
+    transform: translateY(-6px);
+    transition:
+        transform 250ms cubic-bezier(.3, .7, .4, 1.5);
+}
+
+.button-82-pushable:active .button-82-front {
+    transform: translateY(-2px);
+    transition: transform 34ms;
+}
+
+.button-82-pushable:hover .button-82-shadow {
+    transform: translateY(4px);
+    transition:
+        transform 250ms cubic-bezier(.3, .7, .4, 1.5);
+}
+
+.button-82-pushable:active .button-82-shadow {
+    transform: translateY(1px);
+    transition: transform 34ms;
+}
+
+.button-82-pushable:focus:not(:focus-visible) {
+    outline: none;
+}
+@media  screen and (max-width:700px) {
+    .evento-item{
+        grid-template-columns: 1fr;
+        margin: 0px;
+        margin-bottom: 20px;
+
+
+    }
+    .evento-texto h2{
+        text-align: center;
+    }
+    .evento-texto ul{
+        flex-wrap: wrap;
+        margin-top: 10px;
+    }
+    .evento-texto p{
+        gap: 10px;
+
+
+
+    }
+    .button-82-pushable{
+        position: relative;
+        width: 100%;
+        right: 0px;
+        margin-top: 10px;
+    }
+    
 }
