--- a/style.css
+++ b/style.css
@@ -186,7 +186,7 @@ footer {
     position: absolute;
     width: 100%;
     height: 2px;
-    background-color: #616161;
+    background-color: #000000;
     transition-duration: .25s;
 }
 
@@ -248,4 +248,10 @@ footer {
         width: 90px;
         height: 90px;
     }
+    .rapido ul{
+    grid-template-columns: 1fr;
+}
+    .lista-acesso li{
+    height: 50px;
+}
 }
