--- a/manifestacoes.css
+++ b/manifestacoes.css
@@ -1,7 +1,3 @@
-
-
-
-
 form input {
 
   width: 400px;
@@ -9,7 +5,6 @@ form input {
   border-radius: 5px;
   border: 1px solid black;
   text-align: left;
-  text-transform: uppercase;
   box-shadow: 2px 2px 1px rgb(125, 123, 123);
   padding: 10px;
 
@@ -27,7 +22,7 @@ form textarea {
   width: 400px;
   text-align: left;
   border-radius: 12px;
-  text-transform: uppercase;
+ 
   padding: 10px;
   border: 1px solid black;
   box-shadow: 2px 2px 1px rgb(125, 123, 123);
@@ -59,6 +54,48 @@ button {
 .file {
   padding: 0px;
 }
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    background-color: #f3f5f7;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+/*modal*/
+.title {
+    color: #1A1110;
+    margin-bottom: 5%;
+}
+
+.modal {
+    display: none; 
+    position: fixed;
+    z-index: 100; 
+    left: 0;
+    top: 0;
+    width: 100%; 
+    height: 100%;
+    overflow: auto;
+    background-color: rgba(0,0,0,0.4);
+}
+
+.modal .content {
+    background-color: #D3D3D3;
+    margin: 15% auto; 
+    padding: 20px;
+    border-radius: 5px;
+    width: 50%; 
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-family: 'roboto';
+    color: var(--title);
+}
+
 @media screen and (max-width:900px) {
 
 p{
@@ -70,5 +107,21 @@ input, textarea, button{
 main{ 
   margin-top: 0px !important;
 }
+.modal .content {
+  background-color: #D3D3D3;
+  margin: 15% auto; 
+  padding: 20px;
+  border-radius: 5px;
+  width: 70%;
+  height: 30%;
+  display: flex;
+  flex-direction: wrap;
+  font-family: 'roboto';
+  color: var(--title);
+}
+.modal{
+  align-items: center;
+}
+
 
 }
